--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="tufts_blue">#1A64A7</color>
     <color name="space_cadet">#223448</color>
+    <color name="philippine_gray">#8B8F93</color>
 </resources>
