Added message and reviews functionalities

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
     <color name="yellow_crayola">#FBAE1F</color>
     <color name="light_gray">#D2D7D1</color>
     <color name="davy_grey">#5E5E5E</color>
+    <color name="gains_boro">#DCDCDC</color>
+    <color name="magnolia">#F5F5FF</color>
+    <color name="alice_blue">#F0F2FF</color>
+
 </resources>
